// Generated by https://github.com/foxglove/foxglove-sdk

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package foxglove;

message app_info {
  string app_name;
  float_64 exec_time;
  float_64 cpu_usage;
}

// A log message
message AppExec {
  // Timestamp of log message
  google.protobuf.Timestamp timestamp = 1;
  int_64 num_apps = 2;
  repeated app_info apps = 3;
}
